@@ -45,11 +45,7 @@ webcoregtk_cppflags += \
 	-I$(srcdir)/WebCore/platform/graphics/gtk \
 	-I$(srcdir)/WebCore/platform/graphics/cairo \
 	-I$(srcdir)/WebCore/loader/gtk \
-	-I$(srcdir)/WebCore/page/gtk \
-	-I$(srcdir)/WebKit/gtk \
-	-I$(srcdir)/WebKit/gtk/WebCoreSupport \
-	-I$(srcdir)/WebKit/gtk/webkit \
-	-I$(top_builddir)/WebKit/gtk/webkit
+	-I$(srcdir)/WebCore/page/gtk
 
 webcore_built_nosources += \
 	DerivedSources/DocTypeStrings.cpp \
